@@ -1,3 +1,8 @@
+2012-03-26  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/52701
+	* gfortran.dg/pr52701.f90: New testcase.
+
 2012-03-26  Ulrich Weigand  <ulrich.weigand@linaro.org>
 
 	PR tree-optimization/52686
